# PegShield

./: .env.example  .gitignore  DEPLOY.md  LST_DePeg_Oracle_BuildPlan.md  Makefile  NOTICE  README.md  SECURITY.md  SUBMISSION.md  demo.sh  plan.md  requirements.txt
artifacts/: bridge_cache.bSOL-v1.json  bridge_cache.jitoSOL-v1.json  bridge_cache.mSOL-v2.json  oracle_state.bSOL-v1.json  oracle_state.jitoSOL-v1.json  oracle_state.json  oracle_state.mSOL-v2.json  pegshield-crowdedness-2026-04-21.html  pegshield-crowdedness-2026-04-21.txt  status_dashboard.html  stress_scenario.json
bridge/: assets.py  bootstrap_cache.py  fetch_pyth.py
cli/: README.md  package-lock.json  package.json
core-engine/: calibration.py  ltv_calculator.py  ou_model.py  pipeline.py  regime_detector.py
dashboard/: README.md  index.html  package-lock.json  package.json  vercel.json  (+1 more)
solana-program/programs/mock-lender/: Cargo.toml
solana-program/programs/mock-lender/src/: lib.rs
solana-program/programs/risk-oracle/: Cargo.toml
solana-program/programs/risk-oracle/src/: constants.rs  errors.rs  lib.rs
solana-program/programs/risk-oracle/src/instructions/: cancel_expired.rs  close_expired_dispute.rs  close_oracle.rs  confirm_update.rs  dispute_update.rs  enable_multi_attester.rs  initialize_oracle.rs  initialize_registry.rs  migrate_risk_state.rs  mod.rs  propose_update.rs  register_attester.rs  resolve_dispute.rs  unregister_attester.rs  update_risk_state.rs
solana-program/programs/risk-oracle/src/state/: attester_registry.rs  dispute_record.rs  mod.rs  pending_update.rs  risk_state.rs
(+83 files in other folders)
