[package]
name = "risk-oracle"
version = "0.1.0"
description = "Solana LST risk oracle program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
